--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,14 @@ a{
     text-align: center;
     margin-bottom: 10px;
 }
+.namesagregar{
+    color: rgb(0, 255, 21);
+    font-weight: bold;
+    margin: 20px;
+    font-size: 0.8em;
+    text-align: center;
+    margin-bottom: 10px;
+}
 .caja img{
     width: 100%;
 }
@@ -297,7 +305,7 @@ a{
 }
 .detallealbum{
     width: 800px;
-    height: 850px;
+    height: auto;
     color:rgb(105, 112, 98) ;
     border-radius: 15px;
     box-shadow: -4px 0 15px rgba(0, 255, 21, 0.637);    
