--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ input{
     flex-direction: row;
     justify-content: center;
     margin: 30px; 
+    padding: 20px;
 }
 .user{
     color: rgb(0, 255, 234);
@@ -177,6 +178,11 @@ a{
 }
 .instagram{
     width: 70px;
+    
+}
+.extra{
+   
+    padding: 20px;
 }
 .nombre{
     margin-top: 30px;
@@ -370,7 +376,7 @@ a{
     margin-top: 20px;
     margin-bottom: 30px;
     box-shadow: -4px 0 15px rgba(0, 255, 21, 0.637);    
-    height: 450px;
+    height: auto;
 }
 .detallegenero{
     color:rgb(105, 112, 98) ;
