--- a/css/styles.css
+++ b/css/styles.css
@@ -365,6 +365,8 @@ a{
     border-radius: 20%;
     width: AUTO;
     margin-bottom: 0px;
+    margin-left: 30px;
+    margin-top: 20px;
     
 }
 .detallestrack{
